@startuml
'https://plantuml.com/sequence-diagram

hide circle
skinparam classAttributeIconSize 0

class ReviewController {
     +findMyReviews(): Iterable<ReviewView>
}

class ReviewServiceImpl {
    +findMyReviews(Long id): Iterable<ReviewView>

}

interface ReviewService <<interface>> {
    +findMyReviews(Long id): Iterable<ReviewView>

}

class Review {
    - reviewID
    - text
    - rating
    - upVote
    - downVote
    - funnyFact
    - dataTime
    - status
    - version
    Review(Long reviewId, String text, int rating, Date date, String status)

}

interface ReviewRepository <<interface>> {
    +findMyReviews(Long customerId): List<ReviewView>
}

ReviewController..>ReviewService
ReviewController..>Review
ReviewService..>ReviewServiceImpl
ReviewServiceImpl..>ReviewRepository
ReviewRepository "1" -right-> "0..*" Review:  records
@enduml
